--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clothing Store</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="navbar">
-  <h1>Clothing Store</h1>  
-  </div>
-  
-  <script src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clothing Store</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
+    <div class="navbar">
+      <h1>Clothing Store</h1>
+      <div class="cart">
+        <i class="bi bi-cart4"></i>
+        <div class="cartAmount">0</div>
+      </div>
+    </div>
+
+    <div id="shop">
+      <div class="item">
+        <img width="200" src="images/img-1.jpg" alt="" />
+        <div class="details">
+          <h2>Casual Shirt</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <div class="price-quantity">
+            <p>$ 45</p>
+            <div class="btn">
+              <i class="bi bi-dash-lg"></i>
+              <div class="quantity">0</div>
+              <i class="bi bi-plus-lg"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
