--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clothing Store</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -14,8 +14,10 @@
     <div class="navbar">
       <h1>Clothing Store</h1>
       <div class="cart">
-        <i class="bi bi-cart4"></i>
-        <div id="cartAmount">0</div>
+        <a href="card.html">
+          <i class="bi bi-cart4"></i>
+          <div id="cartAmount">0</div>
+        </a>
       </div>
     </div>
 
@@ -37,6 +39,8 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+
+<script src="src/Data.js"></script>
+    <script src="/src/script.js"></script>
   </body>
 </html>
